--- a/Configs/.config/waybar/theme.css
+++ b/Configs/.config/waybar/theme.css
@@ -1,10 +1,10 @@
 @define-color bar-bg rgba(0, 0, 0, 0);
 
-@define-color main-bg #11111b;
-@define-color main-fg #cdd6f4;
+@define-color main-bg #13131D;
+@define-color main-fg #FFFFFF;
 
-@define-color wb-act-bg #a6adc8;
-@define-color wb-act-fg #313244;
+@define-color wb-act-bg #6AA9C9;
+@define-color wb-act-fg #EFEFF5;
 
-@define-color wb-hvr-bg #f5c2e7;
-@define-color wb-hvr-fg #313244;
+@define-color wb-hvr-bg #020817;
+@define-color wb-hvr-fg #ae00f3;
